<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3e3fb"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">
    <!-- App Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="213dp"
        android:layout_height="218dp"
        android:layout_marginBottom="16dp"
        android:clipToOutline="true"
        android:contentDescription="@string/imageDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_smart_invoice" />
    <!-- Title -->
    <TextView
        android:id="@+id/tvSignupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="32dp"
        />
    <!-- First Name and Last Name (Horizontal) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fName"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/edit_text"/>
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lName"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginStart="8dp"
            android:background="@android:drawable/edit_text" />
    </LinearLayout>
    <!-- Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />
    <!-- Password -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />
    <!-- Confirm Password -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="24dp" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:padding="12dp" />
    <!-- Login Redirect -->
    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redirect"
        android:textColor="#3F51B5"
        android:layout_marginTop="24dp" />
</LinearLayout>